Correcting the main element's top margin on small screens

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -33,7 +33,7 @@ header {
 }
 
 main {
-	margin-top: 79px;
+	margin-top: 60px;
 }
 
 @media (min-width: 992px) {
